# pisi

./: AUTHORS  ChangeLog  README  build_chroot.sh  chroot_pkglist.txt  pisi.py  pisi_build.py  pisi_venv_functions.bash  prepare_pisi_venv.sh  pyproject.toml  shared_functions.bash
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
pisi/: __init__.py  api.py  archive.py  atomicoperations.py  blacklist.py  comariface.py  component.py  config.py  configfile.py  conflict.py  constants.py  context.py  dependency.py  errors.py  fetcher.py  file.py  files.py  graph.py  group.py  history.py  index.py  metadata.py  mirrors.py  oo.py  package.py  path.py  pgraph.py  relation.py  replace.py  signalhandler.py  sourcearchive.py  specfile.py  ui.py  uri.py  urlcheck.py  util.py  version.py
pisi/actionsapi/: __init__.py  autotools.py  cmaketools.py  coreutils.py  get.py  kde.py  kde4.py  kerneltools.py  libtools.py  perlmodules.py  pisitools.py  pisitoolsfunctions.py  pythonmodules.py  qt4.py  rubymodules.py  scons.py  shelltools.py  texlivemodules.py  variables.py  waftools.py
pisi/cli/: __init__.py  addrepo.py  autoremove.py  blame.py  build.py  check.py  clean.py  command.py  configurepending.py  deletecache.py  delta.py  disablerepo.py  enablerepo.py  fetch.py  help.py  history.py  index.py  info.py  install.py  listavailable.py  listcomponents.py  listinstalled.py  listrepo.py  (+13 more)
po/: ca.po  de.po  el.po  es.po  es_ES.po  es_US.po  fr.po  fr_FR.po  hr.po  hu.po  it.po  nl.po  nl_BE.po  nl_NL.po  pisi.pot  pl.po  pt_BR.po  pt_PT.po  ru.po  sv.po  tr.po  uk.po  uk_UA.po
(+34 files in other folders)
